--- a/HousePriceDataset.ipynb
+++ b/HousePriceDataset.ipynb
@@ -22,43 +22,24 @@
   "nbformat": 4,
   "cells": [
     {
-      "cell_type": "code",
-      "source": "# *** Goal of the Dataset ***\n\n# The goal of this dataset is to predict housing prices based on multiple features such as the number of bedrooms, lot size, number of bathrooms, and other related characteristics.\n# This dataset helps in building regression models that estimate the selling price of a house given various attributes.\n",
-      "metadata": {
-        "trusted": true,
-        "jupyter": {
-          "source_hidden": true
-        }
-      },
-      "outputs": [],
-      "execution_count": null
+      "cell_type": "markdown",
+      "source": " Goal of the Dataset \n\nThe goal of this dataset is to predict housing prices based on multiple features such as the number of bedrooms, lot size, number of bathrooms, and other related characteristics.\nThis dataset helps in building regression models that estimate the selling price of a house given various attributes.",
+      "metadata": {}
+    },
+    {
+      "cell_type": "markdown",
+      "source": " Dataset Source \n\nThis dataset was obtained from Kaggle, a popular platform for datasets and machine learning challenges.\n\nLink to the dataset: [Housing Prices Dataset on Kaggle](https://www.kaggle.com/datasets/yasserh/housing-prices-dataset)",
+      "metadata": {}
     },
     {
       "cell_type": "code",
-      "source": "# *** Dataset Source ***\n\n# This dataset was obtained from Kaggle, a popular platform for datasets and machine learning challenges.\n\n# Link to the dataset: [Housing Prices Dataset on Kaggle](https://www.kaggle.com/datasets/yasserh/housing-prices-dataset)\n",
+      "source": "import piplite\nawait piplite.install('seaborn')\n\nimport pandas as pd\nimport seaborn as sns\nimport matplotlib.pyplot as plt\n# from sklearn.datasets import load_Housing\n\nHousing = pd.read_csv('Housing.csv')\n\nHousing.head()",
       "metadata": {
-        "trusted": true,
-        "jupyter": {
-          "source_hidden": true
-        }
-      },
-      "outputs": [],
-      "execution_count": null
-    },
-    {
-      "cell_type": "code",
-      "source": "import piplite\nawait piplite.install('seaborn')\n\nimport pandas as pd\nimport seaborn as sns\nimport matplotlib.pyplot as plt\n# from sklearn.datasets import load_Housing\n\nHousing = pd.read_csv('/drive/data/Housing.csv')\n\nHousing.head()\n",
-      "metadata": {
-        "trusted": true,
-        "scrolled": true,
-        "collapsed": true,
-        "jupyter": {
-          "outputs_hidden": true
-        }
+        "trusted": true
       },
       "outputs": [
         {
-          "execution_count": 7,
+          "execution_count": 17,
           "output_type": "execute_result",
           "data": {
             "text/plain": "      price  area  bedrooms  bathrooms  stories mainroad guestroom basement  \\\n0  13300000  7420         4          2        3      yes        no       no   \n1  12250000  8960         4          4        4      yes        no       no   \n2  12250000  9960         3          2        2      yes        no      yes   \n3  12215000  7500         4          2        2      yes        no      yes   \n4  11410000  7420         4          1        2      yes       yes      yes   \n\n  hotwaterheating airconditioning  parking prefarea furnishingstatus  \n0              no             yes        2      yes        furnished  \n1              no             yes        3       no        furnished  \n2              no              no        2      yes   semi-furnished  \n3              no             yes        3      yes        furnished  \n4              no             yes        2       no        furnished  ",
@@ -67,73 +48,20 @@
           "metadata": {}
         }
       ],
-      "execution_count": 7
+      "execution_count": 17
     },
     {
       "cell_type": "code",
-      "source": "# Number of columns\nHousing.shape[1]",
+      "source": "Housing.shape[1]",
       "metadata": {
-        "trusted": true,
-        "jupyter": {
-          "outputs_hidden": true,
-          "source_hidden": true
-        },
-        "scrolled": true,
-        "collapsed": true
-      },
-      "outputs": [
-        {
-          "execution_count": 20,
-          "output_type": "execute_result",
-          "data": {
-            "text/plain": "13"
-          },
-          "metadata": {}
-        }
-      ],
-      "execution_count": 20
-    },
-    {
-      "cell_type": "code",
-      "source": "# Number of rows \nHousing.shape[0]",
-      "metadata": {
-        "trusted": true,
-        "jupyter": {
-          "source_hidden": true,
-          "outputs_hidden": true
-        },
-        "scrolled": true,
-        "collapsed": true
-      },
-      "outputs": [
-        {
-          "execution_count": 21,
-          "output_type": "execute_result",
-          "data": {
-            "text/plain": "545"
-          },
-          "metadata": {}
-        }
-      ],
-      "execution_count": 21
-    },
-    {
-      "cell_type": "code",
-      "source": "# Get the number of rows and columns\nHousing.shape",
-      "metadata": {
-        "trusted": true,
-        "collapsed": true,
-        "jupyter": {
-          "source_hidden": true,
-          "outputs_hidden": true
-        }
+        "trusted": true
       },
       "outputs": [
         {
           "execution_count": 8,
           "output_type": "execute_result",
           "data": {
-            "text/plain": "(545, 13)"
+            "text/plain": "13"
           },
           "metadata": {}
         }
@@ -142,18 +70,49 @@
     },
     {
       "cell_type": "code",
-      "source": "# Display the column names\nHousing.columns",
+      "source": "Housing.shape[0]",
       "metadata": {
-        "trusted": true,
-        "collapsed": true,
-        "jupyter": {
-          "outputs_hidden": true,
-          "source_hidden": true
-        }
+        "trusted": true
       },
       "outputs": [
         {
-          "execution_count": 15,
+          "execution_count": 9,
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": "545"
+          },
+          "metadata": {}
+        }
+      ],
+      "execution_count": 9
+    },
+    {
+      "cell_type": "code",
+      "source": "# Get the number of rows and columns\nHousing.shape",
+      "metadata": {
+        "trusted": true
+      },
+      "outputs": [
+        {
+          "execution_count": 11,
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": "(545, 13)"
+          },
+          "metadata": {}
+        }
+      ],
+      "execution_count": 11
+    },
+    {
+      "cell_type": "code",
+      "source": "# Display the column names\nHousing.columns",
+      "metadata": {
+        "trusted": true
+      },
+      "outputs": [
+        {
+          "execution_count": 12,
           "output_type": "execute_result",
           "data": {
             "text/plain": "Index(['price', 'area', 'bedrooms', 'bathrooms', 'stories', 'mainroad',\n       'guestroom', 'basement', 'hotwaterheating', 'airconditioning',\n       'parking', 'prefarea', 'furnishingstatus'],\n      dtype='object')"
@@ -161,23 +120,17 @@
           "metadata": {}
         }
       ],
-      "execution_count": 15
+      "execution_count": 12
     },
     {
       "cell_type": "code",
       "source": "# Column names and types\nHousing.dtypes",
       "metadata": {
-        "trusted": true,
-        "scrolled": true,
-        "collapsed": true,
-        "jupyter": {
-          "outputs_hidden": true,
-          "source_hidden": true
-        }
+        "trusted": true
       },
       "outputs": [
         {
-          "execution_count": 10,
+          "execution_count": 13,
           "output_type": "execute_result",
           "data": {
             "text/plain": "price                int64\narea                 int64\nbedrooms             int64\nbathrooms            int64\nstories              int64\nmainroad            object\nguestroom           object\nbasement            object\nhotwaterheating     object\nairconditioning     object\nparking              int64\nprefarea            object\nfurnishingstatus    object\ndtype: object"
@@ -185,23 +138,17 @@
           "metadata": {}
         }
       ],
-      "execution_count": 10
+      "execution_count": 13
     },
     {
       "cell_type": "code",
       "source": "# Display basic statistics about the target variable\ntarget_variable_stats = Housing['price'].describe()\ntarget_variable_range = Housing['price'].min(), Housing['price'].max()\n\ntarget_variable_stats, target_variable_range",
       "metadata": {
-        "trusted": true,
-        "scrolled": true,
-        "collapsed": true,
-        "jupyter": {
-          "outputs_hidden": true,
-          "source_hidden": true
-        }
+        "trusted": true
       },
       "outputs": [
         {
-          "execution_count": 18,
+          "execution_count": 14,
           "output_type": "execute_result",
           "data": {
             "text/plain": "(count    5.450000e+02\n mean     4.766729e+06\n std      1.870440e+06\n min      1.750000e+06\n 25%      3.430000e+06\n 50%      4.340000e+06\n 75%      5.740000e+06\n max      1.330000e+07\n Name: price, dtype: float64,\n (1750000, 13300000))"
@@ -209,28 +156,16 @@
           "metadata": {}
         }
       ],
-      "execution_count": 18
+      "execution_count": 14
     },
     {
       "cell_type": "code",
-      "source": "# Target Variable\n\n# In this dataset, the target variable is `price`, which represents the selling price of the houses. This is a continuous numerical variable used for regression analysis.\n\n#  Target Variable Details:\n# - Name: `price`\n# - Type: Numerical (Continuous)\n# - Range: From 1,750,000 to 13,300,000\n# - Statistics:\n# - Mean: 4,766,729\n# - Standard Deviation: 1,870,440\n# - Median: 4,340,000\n# - Minimum Value: 1,750,000\n# - 25th Percentile: 3,430,000\n# - 75th Percentile: 5,740,000\n# - Maximum Value: 13,300,000\n",
-      "metadata": {
-        "trusted": true,
-        "jupyter": {
-          "source_hidden": true
-        }
-      },
-      "outputs": [],
-      "execution_count": null
-    },
-    {
-      "cell_type": "code",
-      "source": "",
+      "source": "# Target Variable\n\n# In this dataset, the target variable is `price`, which represents the selling price of the houses. This is a continuous numerical variable used for regression analysis.\n\n#  Target Variable Details:\n# - Name: `price`\n# - Type: Numerical (Continuous)\n# - Range: From 1,750,000 to 13,300,000\n# - Statistics:\n# - Mean: 4,766,729\n# - Standard Deviation: 1,870,440\n# - Median: 4,340,000\n# - Minimum Value: 1,750,000\n# - 25th Percentile: 3,430,000\n# - 75th Percentile: 5,740,000\n# - Maximum Value: 13,300,000",
       "metadata": {
         "trusted": true
       },
       "outputs": [],
-      "execution_count": null
+      "execution_count": 15
     }
   ]
 }
