--- a/HousePriceDataset.ipynb
+++ b/HousePriceDataset.ipynb
@@ -23,13 +23,17 @@
   "cells": [
     {
       "cell_type": "markdown",
-      "source": " Goal of the Dataset \n\nThe goal of this dataset is to predict housing prices based on multiple features such as the number of bedrooms, lot size, number of bathrooms, and other related characteristics.\nThis dataset helps in building regression models that estimate the selling price of a house given various attributes.",
+      "source": " Goal of the Dataset:\n\nThe goal of this dataset is to predict housing prices based on multiple features such as the number of bedrooms, lot size, number of bathrooms, and other related characteristics.\nThis dataset helps in building regression models that estimate the selling price of a house given various attributes.",
       "metadata": {}
     },
     {
-      "cell_type": "markdown",
-      "source": " Dataset Source \n\nThis dataset was obtained from Kaggle, a popular platform for datasets and machine learning challenges.\n\nLink to the dataset: [Housing Prices Dataset on Kaggle](https://www.kaggle.com/datasets/yasserh/housing-prices-dataset)",
-      "metadata": {}
+      "cell_type": "code",
+      "source": " Dataset Source:\n\nThis dataset was obtained from Kaggle, a popular platform for datasets and machine learning challenges.\n                                                         \nLink to the dataset: [Housing Prices Dataset on Kaggle](https://www.kaggle.com/datasets/yasserh/housing-prices-dataset)",
+      "metadata": {
+        "trusted": true
+      },
+      "outputs": [],
+      "execution_count": null
     },
     {
       "cell_type": "code",
