--- a/HousePriceDataset.ipynb
+++ b/HousePriceDataset.ipynb
@@ -27,9 +27,13 @@
       "metadata": {}
     },
     {
-      "cell_type": "markdown",
+      "cell_type": "code",
       "source": " Dataset Source:\n\nThis dataset was obtained from Kaggle, a popular platform for datasets and machine learning challenges.\n                                                         \n                                                         \n                                                         \nLink to the dataset: [Housing Prices Dataset on Kaggle](https://www.kaggle.com/datasets/yasserh/housing-prices-dataset)",
-      "metadata": {}
+      "metadata": {
+        "trusted": true
+      },
+      "outputs": [],
+      "execution_count": null
     },
     {
       "cell_type": "code",
@@ -39,7 +43,7 @@
       },
       "outputs": [
         {
-          "execution_count": 8,
+          "execution_count": 9,
           "output_type": "execute_result",
           "data": {
             "text/plain": "      price  area  bedrooms  bathrooms  stories mainroad guestroom basement  \\\n0  13300000  7420         4          2        3      yes        no       no   \n1  12250000  8960         4          4        4      yes        no       no   \n2  12250000  9960         3          2        2      yes        no      yes   \n3  12215000  7500         4          2        2      yes        no      yes   \n4  11410000  7420         4          1        2      yes       yes      yes   \n\n  hotwaterheating airconditioning  parking prefarea furnishingstatus  \n0              no             yes        2      yes        furnished  \n1              no             yes        3       no        furnished  \n2              no              no        2      yes   semi-furnished  \n3              no             yes        3      yes        furnished  \n4              no             yes        2       no        furnished  ",
@@ -48,7 +52,7 @@
           "metadata": {}
         }
       ],
-      "execution_count": 8
+      "execution_count": 9
     },
     {
       "cell_type": "code",
@@ -148,7 +152,7 @@
       },
       "outputs": [
         {
-          "execution_count": 14,
+          "execution_count": 7,
           "output_type": "execute_result",
           "data": {
             "text/plain": "(count    5.450000e+02\n mean     4.766729e+06\n std      1.870440e+06\n min      1.750000e+06\n 25%      3.430000e+06\n 50%      4.340000e+06\n 75%      5.740000e+06\n max      1.330000e+07\n Name: price, dtype: float64,\n (1750000, 13300000))"
@@ -156,7 +160,7 @@
           "metadata": {}
         }
       ],
-      "execution_count": 14
+      "execution_count": 7
     },
     {
       "cell_type": "code",
@@ -165,7 +169,7 @@
         "trusted": true
       },
       "outputs": [],
-      "execution_count": 15
+      "execution_count": 8
     }
   ]
 }
